# rust-mumble

./: Cargo.toml  Dockerfile
src/: clean.rs  client.rs  crypt.rs  error.rs  main.rs  metrics.rs  state.rs
src/handler/: mod.rs  ping.rs  user_stats.rs  voice_packet.rs
src/http/: status.rs
src/message/: mod.rs
src/proto/: mod.rs
src/server/: constants.rs  tcp.rs  udp.rs
