[package]
name = "zumble"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.93"
# TODO: Update to https://github.com/RustCrypto/block-modes
block-modes = "0.9.1"
bytes = "1.9.0"
byteorder = "1.5.0"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
protobuf = "2.28.0"
ring = "0.17.8"
rustls = { version = "0.23.19", features = ["ring", "tls12"], default-features = false }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-byteorder = "0.3.0"
tokio-rustls = { version = "0.26.0", features = ["ring", "tls12"], default-features = false}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prometheus = { version  = "0.13.4", features = ["process"] }
rustls-pki-types = "1.10.0"
rcgen = { version = "0.13.1" }
scc = "2.2.5"
parking_lot = "0.12.3"
arc-swap = "1.7.1"
crossbeam = "0.8.4"
axum = { version = "0.7.9", features = ["macros"] }
# TODO update whenever axum-server and axum-auth go to 0.8.1
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
axum-auth = "0.7.0"
tokio-util = "0.7.13"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
codegen-units = 1
lto = true
#debug = 1
panic = "abort"
